crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF040_RUF040.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF040 Non-string literal used as assert message
 --> RUF040.py:3:21
  |
3 | assert len(fruits), 2
  |                     ^
  |
